# Gestore-pub

./: .cta.json  .gitignore  CHANGELOG.md  PRIVACY.md  README.md  SECURITY_AUDIT_REPORT.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html  style.css
prisma/: dev.db  reset-admin-password.ts  schema.prisma  seed.ts  simulate-300.ts
prisma/migrations/20260527170307_init/: migration.sql
prisma/migrations/20260529120000_admin_without_membership/: migration.sql
prisma/migrations/20260529143000_add_sessions/: migration.sql
prisma/migrations/20260529150000_add_member_qr_token/: migration.sql
prisma/migrations/20260530120000_add_unique_daily_attendance/: migration.sql
prisma/migrations/20260530133000_attendance_snapshots/: migration.sql
prisma/migrations/20260531120000_add_performance_indexes/: migration.sql
prisma/migrations/20260616183000_add_recovery_question/: migration.sql
public/: manifest.json  sw.js
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/deb/: postrm.sh
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  db.rs  error.rs  main.rs
src/components/: Footer.tsx  Header.tsx  LocalDataResetPanel.tsx  UpdateNotice.tsx
src/lib/: api.functions.ts  api.ts  auth.server.ts  db.ts  desktop-api.test.ts  desktop-api.ts  export-preferences.ts  tauri-bridge.ts  update-check.test.ts  update-check.ts
src/routes/: __root.tsx  about.tsx  admin.tsx  index.tsx  login.tsx  profile.tsx  setup.tsx
src/routes/admin/: attendance.tsx  create.tsx  impostazioni.tsx  index.tsx  (+3 more)
