[package]
name = "the-club"
version = "2.0.0"
description = "The Club - Club Privato Management"
edition = "2021"
authors = ["Francesco Dell'Orto"]
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = { version = "2" }
url = { version = "2" }
